# e-commerce

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
deploy/nginx/: Dockerfile  host.conf
deploy/python/: Dockerfile
deploy/vue/: Dockerfile
market_vue/: README.md  package-lock.json  package.json
market_vue/src/: App.vue  main.js
market_vue/src/components/: CartItem.vue
market_vue/src/router/: index.js
market_vue/src/store/: index.js
market_vue/src/views/: Cart.vue  Category.vue  Checkout.vue  HomeView.vue  Login.vue  MyAccount.vue  Product.vue  Search.vue  SingUp.vue  Success.vue
src/market/: settings.py  urls.py
src/order/: models.py  serializers.py  urls.py  views.py
src/order/migrations/: 0001_initial.py
src/product/: models.py  serializers.py  urls.py  views.py
src/product/migrations/: 0001_initial.py  0002_product.py
